fix contrast of mouseover on grey buttons

--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -56,6 +56,10 @@
   @include button($diverst-black);
 }
 
+.btn--secondary:hover { 
+  color: $diverst-grey-light;
+}
+
 .btn--tertiary {
   @include button($diverst-grey-light);
 }
